--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+argh==0.26.2
 Click==7.0
 Flask==1.1.1
 Flask-SQLAlchemy==2.4.1
@@ -5,7 +6,10 @@ Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+pathtools==0.1.2
 python-dotenv==0.10.3
+PyYAML==5.2
 SQLAlchemy==1.3.12
+watchdog==0.9.0
 Werkzeug==0.16.0
 WTForms==2.2.1
