--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.3.2
+argh==0.26.2
 Click==7.0
 Flask==1.1.1
 Flask-Migrate==2.5.2
@@ -8,10 +9,13 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+pathtools==0.1.2
 python-dateutil==2.8.1
 python-dotenv==0.10.3
 python-editor==1.0.4
+PyYAML==5.2
 six==1.13.0
 SQLAlchemy==1.3.12
+watchdog==0.9.0
 Werkzeug==0.16.0
 WTForms==2.2.1
